# modular

./: .bazelignore  .bazelrc  .bazelversion  .cursorrules  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  bazelw  pixi.toml  pyproject.toml
bazel/: BUILD.bazel  api.bzl  common.MODULE.bazel  config.bzl  mblack_alias.bzl  modular_host_platform.bzl  modular_wheel_repository.bzl  mojo.MODULE.bazel  mojo_aliases.bzl  requirements.txt  toolchains_llvm.patch
bazel/docs/: usage.md
bazel/internal/: BUILD.bazel  apple_gpu_detection.patch  bazel-debug.sh  binary_test.bzl  common.bazelrc  config.bzl  create_venv.py  gpu_toolchain_alias.bzl  lib_toolchain.bzl  lit.bzl  load_bazel_tools.py  modular_py_binary.bzl  modular_py_library.bzl  modular_py_venv.bzl  modular_run_binary_test.bzl  mojo-filecheck-test.sh  mojo_binary.bzl  mojo_collect_deps_aspect.bzl  mojo_doc.bzl  mojo_filecheck_test.bzl  mojo_library.bzl  mojo_linker_info.bzl  mojo_test.bzl  mojo_test_environment.bzl  mojodoc_json_to_markdown.py  nixl_plugin.bzl  py_repl.bzl  sitecustomize.py
bazel/internal/llvm-lit/: BUILD.bazel  lit.common.cfg.py  lit.common.configured.in  lit_shim.py  modular_test_format.py  validate_lit_features.py
bazel/internal/mojodoc-templates/: macros.jinja  mojodoc_function.md  mojodoc_module.md  mojodoc_struct.md
bazel/lint/: .markdownlint.yaml  BUILD.bazel  check_licenses.mojo  lint_unused_lit_directives.py  markdownlint-wrapper.sh  mblack-wrapper.py  package-lock.json  package.json  pnpm-lock.yaml  ruff-wrapper.sh
bazel/pip/: module_versions.bzl  pip_requirement.bzl  pip_requirements.bzl
bazel/pip/pycross/: BUILD.bazel  dependency.py  download.py  generate.py  package.py  pip_platform.py  render.py  template.py  test_dependency.py  test_download.py  test_pip_platform.py  test_render.py  utils.py
bazel/pip/requirements/: BUILD.bazel  amd-gpu-requirements.in  amd-gpu-requirements.txt  default-uv.toml  gpu-uv.toml  nvidia-gpu-requirements.in  nvidia-gpu-requirements.txt  pycross_lock_file.bzl  pyproject.toml  requirements.in  uv-lock.sh  uv-wrapper.sh  uv.bzl
bazel/public-patches/: aspect_rules_js_exec_groups.patch  aspect_rules_js_toolchains.patch  grpc-java.patch  grpc-no-macos-x86.patch  grpc-providers.patch  grpc-rules-python.patch  grpc-warnings.patch  grpc.patch  opentelemetry.patch  protobuf-debug-context.patch  protobuf-platforms.patch  protobuf-windows.patch  rules_foreign_cc_bazel_out.patch  rules_foreign_cc_sysroot.patch  rules_go.patch  rules_js_env_inherit.patch  rules_mojo_use_mojo_compiler_wheel.patch  rules_mojo_version.patch  rules_mypy_mojo_srcs.patch  rules_mypy_pycross.patch  rules_mypy_pyi_files.patch  rules_mypy_pyinfo.patch  rules_mypy_user_site.patch  rules_mypy_zipfile.patch  rules_nodejs_toolchains.patch  rules_py_main.patch  rules_pycross_deprecations.patch  rules_pycross_linker.patch  rules_pycross_lockfile.patch  rules_pycross_shebang.patch  rules_pycross_watch.patch  rules_python_override_hub.patch  rules_python_py_wheel_requires_file.patch  rules_python_skip.patch  rules_python_warning.patch  rules_python_wheel.patch  with_cfg_visibility.patch
benchmark/: .gitignore  BUILD.bazel  README.md  base_benchmark_config.yaml  base_config.yaml  benchmark_config.py  benchmark_cpu_metrics.py  benchmark_datasets.py  benchmark_serving.py  metrics.py  pyproject.toml  requirements.txt  sample_workload_utils.py  serving_config.yaml
benchmark/datasets/: axolotl_dummy.json  sonnet_4x.txt
examples/custom-graph-module/: BUILD.bazel  README.md  main.py  mlp.py  pixi.toml
examples/custom_ops/: .gitignore  BUILD.bazel  README.md  addition.py  benchmarks.mojo  causal_conv1d.py  custom_op_example.bzl  fused_attention.py  histogram.py  image_pipeline.py  mandelbrot.py  matrix_multiplication.py  mojoproject.toml  parametric_addition.py  pixi.toml  top_k.py  vector_addition.py  whisper.py
examples/custom_ops/kernels/: __init__.mojo  add_constant.mojo  add_custom.mojo  add_one.mojo  amd_helpers.mojo  causal_conv1d.mojo  fused_attention.mojo  histogram.mojo  image_pipeline.mojo  mandelbrot.mojo  matrix_multiplication.mojo  tensor_core_mma.mojo  top_k.mojo  vector_addition.mojo
examples/gpu_functions/: BUILD.bazel  README.md  grayscale.mojo  mandelbrot.mojo  naive_matrix_multiplication.mojo  pixi.toml  reduction.mojo  vector_addition.mojo
examples/max-graph/: BUILD.bazel  README.md  addition.py  pixi.toml  pyproject.toml  test_addition.py
examples/mojo/: .gitignore  BUILD.bazel  README.md  check_mod.py  deviceinfo.mojo  extract_mojo_program.py  hello.🔥  hello_interop.mojo  lit.cfg.py  lit.site.cfg.py.in  mandelbrot.mojo  matmul.mojo  mojo_jupyter_runner.py  mojoproject.toml  nbody.mojo  process_notebooks.py  reduce.mojo  run-examples.sh  simple_interop.py
examples/mojo/gpu-functions/: BUILD.bazel  README.md  grayscale.mojo  (+6 more)
examples/offline-inference/: BUILD.bazel  README.md  basic.py  pixi.toml
examples/python_modules/: BUILD.bazel  README.md
examples/pytorch_custom_ops/: BUILD.bazel  README.md  addition.py  custom_op_example.bzl  graph.py  grayscale.py  pixi.toml  torch-grayscale.py  whisper.py
max/entrypoints/: BUILD.bazel  _package_root.py  gpu_query.py  llm.py  mojo.py  pipelines.py  replay_recording.py
max/graph/: BUILD.bazel  __init__.py  core.pyi  dim.py  dtype.py  dtype_promotion.py  graph.py  graph_value.py  quantization.py  shape.py  type.py  value.py  weight.py
max/nn/: BUILD.bazel  README.md  __init__.py  _identity.py  clamp.py  conv.py  conv_transpose.py  embedding.py  float8_config.py  kernels.py  linear.py  no_opaque_kernels.py  rotary_embedding.py
max/pipelines/: BUILD.bazel  README.md  __init__.py  requirements.txt
max/serve/: BUILD.bazel  README.md  api_server.py  config.py  debug.py  exceptions.py  process_control.py  request.py
mojo/docs/: BUILD.bazel  README.md  changelog-released.md  changelog.md  faq.md  lib.mdx  roadmap.md  roadmap.mdx  vision.mdx
mojo/integration-test/: BUILD.bazel  lit.cfg.py  lit.site.cfg.py.in
tutorials/run-embeddings-with-max-serve/: README.md  pyproject.toml
(+4379 files in other folders)
