load("@mojo_gpu_toolchains//:gpus.bzl", "SUPPORTED_GPUS")

package(default_visibility = ["//visibility:public"])

alias(
    name = "has_gpu",
    actual = "@mojo_gpu_toolchains//:has_gpu",
)

alias(
    name = "has_multi_gpu",
    actual = "@mojo_gpu_toolchains//:has_multi_gpu",
)

alias(
    name = "has_4_gpus",
    actual = "@mojo_gpu_toolchains//:has_4_gpus",
)

alias(
    name = "amd_gpu",
    actual = "@mojo_gpu_toolchains//:amd_gpu",
)

alias(
    name = "nvidia_gpu",
    actual = "@mojo_gpu_toolchains//:nvidia_gpu",
)

[
    alias(
        name = "{}_gpu".format(gpu),
        actual = "@mojo_gpu_toolchains//:{}_gpu".format(gpu),
        tags = ["maybe-unused"],
    )
    for gpu in SUPPORTED_GPUS.keys()
]

config_setting(
    name = "asan",
    tags = ["maybe-unused"],
    values = {"features": "asan"},
)

config_setting(
    name = "ubsan",
    tags = ["maybe-unused"],
    values = {"features": "ubsan"},
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

alias(
    name = "lint",
    actual = "//bazel/lint",
    tags = ["top-level"],
)

alias(
    name = "format",
    actual = "//bazel/lint:fix",
    tags = ["top-level"],
)
