load("@mojo_gpu_toolchains//:gpus.bzl", "SUPPORTED_GPUS")
load("//bazel:config.bzl", "ALLOW_UNUSED_TAG", "DEFAULT_GPU_MEMORY", "TOP_LEVEL_TAG")

package(default_visibility = ["//visibility:public"])

alias(
    name = "has_gpu",
    actual = "@mojo_gpu_toolchains//:has_gpu",
)

alias(
    name = "has_multi_gpu",
    actual = "@mojo_gpu_toolchains//:has_multi_gpu",
)

alias(
    name = "has_4_gpus",
    actual = "@mojo_gpu_toolchains//:has_4_gpus",
    tags = [ALLOW_UNUSED_TAG],
)

alias(
    name = "amd_gpu",
    actual = "@mojo_gpu_toolchains//:amd_gpu",
)

alias(
    name = "nvidia_gpu",
    actual = "@mojo_gpu_toolchains//:nvidia_gpu",
)

alias(
    name = "apple_gpu",
    actual = "@mojo_gpu_toolchains//:apple_gpu",
    tags = [ALLOW_UNUSED_TAG],
)

[
    alias(
        name = "{}_gpu".format(gpu),
        actual = "@mojo_gpu_toolchains//:{}_gpu".format(gpu),
        tags = [ALLOW_UNUSED_TAG],
    )
    for gpu in SUPPORTED_GPUS.keys()
]

config_setting(
    name = "asan",
    tags = [ALLOW_UNUSED_TAG],
    values = {"features": "asan"},
)

config_setting(
    name = "tsan",
    tags = [ALLOW_UNUSED_TAG],
    values = {"features": "tsan"},
)

config_setting(
    name = "ubsan",
    tags = [ALLOW_UNUSED_TAG],
    values = {"features": "ubsan"},
)

config_setting(
    name = "production_build",
    tags = [ALLOW_UNUSED_TAG],
    values = {"features": "UNREACHABLE"},
)

config_setting(
    name = "modular_config_production",
    tags = [ALLOW_UNUSED_TAG],
    values = {"features": "UNREACHABLE"},
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

alias(
    name = "lint",
    actual = "//bazel/lint",
    tags = [TOP_LEVEL_TAG],
)

alias(
    name = "format",
    actual = "//bazel/lint:fix",
    tags = [TOP_LEVEL_TAG],
)

platform(
    name = "m7i-platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Pool": "m7i-large-executors",
        "OSFamily": "Linux",
        "container-image": "docker://466483404629.dkr.ecr.us-east-1.amazonaws.com/modular-build-env:ubuntu2204",
        "dockerNetwork": "off",
    },
)

platform(
    name = "h100-platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        ":nvidia_gpu",
        ":has_gpu",
        ":has_multi_gpu",
        ":h100_gpu",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "Pool": "oci-h100-executors",
        "container-image": "docker://us-ashburn-1.ocir.io/idiy4j6eayc0/modular-build-env:ubuntu2204-gpu",
        "dockerNetwork": "off",
        "test.resources:gpu-count": "0.01",
        "test.resources:gpu-memory": DEFAULT_GPU_MEMORY,
        "test.resources:gpu-1": "0.01",
    },
)

platform(
    name = "mi300-platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        ":amd_gpu",
        ":has_gpu",
        ":mi300x_gpu",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "Pool": "mi300-executors",
        "container-image": "docker://us-ashburn-1.ocir.io/idiy4j6eayc0/modular-build-env:ubuntu2204-rocm",
        "dockerNetwork": "off",
        "test.resources:gpu-count": "0.01",
        "test.resources:gpu-memory": DEFAULT_GPU_MEMORY,
        "test.resources:gpu-1": "0.01",
    },
)
